examples/datalog/18_advanced_patterns/117_window_function_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_window
Knowledge graph 'test_window' created.
Switched to knowledge graph: test_window
> .kg use test_window
Switched to knowledge graph: test_window
> +sales[(1, "East", 100), (2, "East", 150), (3, "West", 200), (4, "West", 120)].
Inserted 4 fact(s) into 'sales'.
> +region_total(Region, <SUM:Amount>) :- sales(_, Region, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
